       This is especially usefull if folders
       are added. (Stefan)
- CHG: before obtaining a subversion status we
       now first check if an .svn directory
       exists - this should speed up things
       a little. (Stefan)
- CHG: In the commit dialog the focus is now
       set to the edit control where the user
       enters the log message. (Stefan)

Version 0.9.2
- BUG: In the Add dialog unversioned folders
       with items in it lead to a crash (Stefan)
- BUG: removed the unused "Help" button from the 
       settings page (Stefan)
- BUG: The coloring in the progress dialog was wrong 
       if the wc contained svn:externals (Stefan)
- BUG: TortoiseSVN wasn't working on Win98-based
       systems anymore 'cause we now use UNICODE.
       So changed the code to compile for either
       MBCS _or_ UNICODE. This means we have
       to provide two binary versions of TSVN 
       from now on (Stefan)
- CHG: The menu items now are properly aligned
       for both with and without icons (Stefan)
- CHG: merge/tag uses again an url->url copy
       command instead of a wc->url copy since
       this doesn't work for working copy root
       folders. (Stefan)

Version 0.9.1
- BUG: the zlib dll lead to some crashes, so
       I went back to statically linked zlib (Stefan)
- BUG: The prompt dialog for log messages wasn't
       resized properly. (Stefan)
- BUG: The check for temp files was case aware (Stefan)
       
Version 0.9 (Subversion 0.21, rev 5631)
- BUG: in some dialog the repository browser button
       was disabled (Stefan)
- BUG: the "show log" menu was shown even if there
       were multiple files selected (Stefan)
- BUG: icon overlays weren't shown correctly if only
       the properties changed (Stefan)
- BUG: revision numbers weren't correct for HEAD (Stefan)
- BUG: workaround for strange apr behaviour when 
       opening a file with WRITE|CREATE (Stefan)
- BUG: import dialog ignored the "use foldername
       as modulename" checkbox (Stefan)